--- a/Fourier_transformation_tutorial.ipynb
+++ b/Fourier_transformation_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fourier transformation in one dimensions discrete interpretation\n",
+    "### Fourier transform in one dimensions discrete interpretation\n",
     "**Steps**:\n",
     "* Generate 1000 discrete number which is distributed as $y=7*\\sin(2\\pi*200x)+5*\\sin(2\\pi*300x)+3*\\sin(2\\pi*400x)$\n",
     "* According to the forlumation below to get the frequency/spectrum domain\n",
@@ -161,11 +161,16 @@
     "\n",
     "**Proof of conjugation**\n",
     "$$\n",
-    "F(N-x)=\\sum_{k=0}^{N-1}f(k)e^{-2\\pi ik\\frac{N-x}{N}}\\\\\n",
-    "=\\sum_{k=0}^{N-1}f(k)e^{-ki(2\\pi -2\\pi \\frac{x}{N})}\\\\\n",
-    "cause : e^{-2\\pi ki}=\\cos(-2\\pi k)+i\\sin(-2\\pi k)=0 \\quad k\\in Z\\\\\n",
-    "=\\sum_{k=0}^{N-1}f(k)e^{2\\pi ikx/N}=\\sum_{k=0}^{N-1}\\cos(2\\pi k\\frac{x}{N})+i\\sin(2\\pi k\\frac{x}{N})\\\\\n",
-    "F(x)=\\sum_{k=0}^{N-1}f(k)e^{-2\\pi ikx/N}=\\sum_{k=0}^{N-1}\\cos(2\\pi k\\frac{x}{N})-i\\sin(2\\pi k\\frac{x}{N})\\\\\n",
+    "F(N-x)=\\sum_{k=0}^{N-1}f(k)e^{-2\\pi ik\\frac{N-x}{N}}\\\\$$\n",
+    "$$\n",
+    "=\\sum_{k=0}^{N-1}f(k)e^{-ki(2\\pi -2\\pi \\frac{x}{N})}$$\n",
+    "$$\n",
+    "cause : e^{-2\\pi ki}=\\cos(-2\\pi k)+i\\sin(-2\\pi k)=0 \\quad k\\in Z\\\\$$\n",
+    "$$\n",
+    "=\\sum_{k=0}^{N-1}f(k)e^{2\\pi ikx/N}=\\sum_{k=0}^{N-1}\\cos(2\\pi k\\frac{x}{N})+i\\sin(2\\pi k\\frac{x}{N})\\\\$$\n",
+    "$$\n",
+    "F(x)=\\sum_{k=0}^{N-1}f(k)e^{-2\\pi ikx/N}=\\sum_{k=0}^{N-1}\\cos(2\\pi k\\frac{x}{N})-i\\sin(2\\pi k\\frac{x}{N})\\\\$$\n",
+    "$$\n",
     "F(x)+F(N-x)=\\sum_{k=0}^{N-1}2\\cos(2\\pi k\\frac{x}{N})\\\\\n",
     "$$\n",
     "* Via evaluating from front computing, we find the image part disappeared and reserve two times real part \n",
@@ -254,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fourier transformation in one dimensions discrete interpretation\n",
+    "### Fourier transform in two dimensions discrete interpretation\n",
     "$$\n",
     "f(x,y)=\\sum_{i=0}^{N-1}\\sum_{j=0}^{N-1}F(i,j)e^{-2\\pi i(\\frac{ix}{N}+\\frac{jy}{N})}\\\\\n",
     "F(x,y)=\\sum_{i=0}^{N-1}\\sum_{j=0}^{N-1}f(i,j)e^{-2\\pi i(\\frac{ix}{N}+\\frac{jy}{N})}\\\\\n",
