--- a/Fourier_transformation_tutorial.ipynb
+++ b/Fourier_transformation_tutorial.ipynb
@@ -9,13 +9,15 @@
     "* Generate 1000 discrete number which is distributed as $y=7*\\sin(2\\pi*200x)+5*\\sin(2\\pi*300x)+3*\\sin(2\\pi*400x)$\n",
     "* According to the forlumation below to get the frequency/spectrum domain\n",
     "$$\n",
-    "f(x)=\\int_{-\\infty}^{\\infty}F(k)e^{2\\pi ikx}dk\\\\\n",
+    "f(x)=\\int_{-\\infty}^{\\infty}F(k)e^{2\\pi ikx}dk\\\\$$\n",
+    "$$\n",
     "F(x)=\\int_{-\\infty}^{\\infty}f(k)e^{-2\\pi ikx}dk\n",
     "$$\n",
     "* Forlumation above is applied in continuously data. Here, $f(x)$ means the 1000 numbers, and the $F(x)$ means the frequency domain corresponding.\n",
     "* We can change for discrete one easily like below.\n",
     "$$\n",
-    "f(x)=\\sum_{k=0}^{N-1}F(k)e^{2\\pi ikx}\\\\\n",
+    "f(x)=\\sum_{k=0}^{N-1}F(k)e^{2\\pi ikx}\\\\$$\n",
+    "$$\n",
     "F(x)=\\sum_{k=0}^{N-1}f(k)e^{-2\\pi ikx}\\\\\n",
     "$$\n",
     "* Which has the similar implication.\n",
@@ -261,7 +263,8 @@
    "source": [
     "### Fourier transform in two dimensions discrete interpretation\n",
     "$$\n",
-    "f(x,y)=\\sum_{i=0}^{N-1}\\sum_{j=0}^{N-1}F(i,j)e^{-2\\pi i(\\frac{ix}{N}+\\frac{jy}{N})}\\\\\n",
+    "f(x,y)=\\sum_{i=0}^{N-1}\\sum_{j=0}^{N-1}F(i,j)e^{-2\\pi i(\\frac{ix}{N}+\\frac{jy}{N})}\\\\$$\n",
+    "$$\n",
     "F(x,y)=\\sum_{i=0}^{N-1}\\sum_{j=0}^{N-1}f(i,j)e^{-2\\pi i(\\frac{ix}{N}+\\frac{jy}{N})}\\\\\n",
     "$$\n",
     "* Actually, if we wanna get the magnitude, we shall multuply the $\\frac{1}{N^2}$ in front like below.\n",
